package RpcLayer;

// ---------------------------------------------------------------------------------------
//                                 ReadDir RPC
// ---------------------------------------------------------------------------------------
message ReadDirRequest {
	required string path = 1;
}

message ReadDirResponse {
	required bool error = 1;
	required uint32 error_code = 2;
	repeated string elements = 3;
}

// ---------------------------------------------------------------------------------------
//                                 GetAttr RPC
// ---------------------------------------------------------------------------------------
message GetAttrRequest {
	required string path = 1;
}

message GetAttrResponse {
	required bool error = 1;
	required uint32 error_code = 2;
	required bool fileExist = 3;
	required uint32 mode = 4;
	required uint32 nlinks = 5;
	required uint32 blocks = 6;
	required uint32 size = 7;
}

// ---------------------------------------------------------------------------------------
//                                 Read RPC
// ---------------------------------------------------------------------------------------
message ReadRequest {
	required string path = 1;
	required uint32 offset = 2;
	required uint32 length = 3;
}

message ReadResponse {
	required bytes data = 1;
	required bool error = 2;
	required uint32 error_code = 3;
}

// ---------------------------------------------------------------------------------------
//                                 Write RPC
// ---------------------------------------------------------------------------------------
message WriteRequest {
	required string path = 1;
	required uint32 offset = 2;
	required bytes data = 3;
}

message WriteResponse {
	required bool error = 1;
	required uint32 error_code = 2;
}

// ---------------------------------------------------------------------------------------
//                                 Service RPC
// ---------------------------------------------------------------------------------------

service RemoteExt2 {
  rpc ReadDir (ReadDirRequest) returns (ReadDirResponse);
  rpc GetAttr (GetAttrRequest) returns (GetAttrResponse);
  rpc Read (ReadRequest) returns (ReadResponse);
  rpc Write (WriteRequest) returns (WriteResponse);
}
